fixed spacing issues

--- a/styles/partials/_content-section.scss
+++ b/styles/partials/_content-section.scss
@@ -1,7 +1,3 @@
-
-
-
-
 .content__container{
     padding: 2rem 2rem;
     
@@ -10,15 +6,16 @@
 @include tablet{
     .content__container{
     padding: 3.2rem;
-    margin:0 auto;     
+    margin-left: 7rem; 
+    margin-right: 7rem;      
  }
 }
 
 @include desktop{
     .content__container{
         padding: 2rem 0rem 3rem; 
-        margin-left: 10rem; 
-        margin-right: 10rem; 
+        margin-left: 20rem; 
+        margin-right: 20rem; 
     }
 }
 
@@ -77,14 +74,15 @@
 @include tablet {
     .content__text{
     width: 80%;
-    margin: auto; 
+    margin-left: 10rem; 
     margin-bottom: 1rem; 
  }
 }
 
 @include desktop{
     .content__text{
-     margin-left: 10rem; 
+     width: 60%;
+     margin-left: 20rem;
     }
 
 }
@@ -131,6 +129,6 @@
 
 @include desktop{
     .content__section{
-        margin: 4rem; 
+        margin: 4rem;  
     }
 }
